<resources>
    <string name="app_name">Dice Roller</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO2</string>
    <string name="TextView">TextView</string>
    <string name="_1_dice">1 Dice</string>
    <string name="how_many_sides_should_your_dice_have">How many sides should your dice have</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_2_dices">2 Dices</string>
    <string name="roll">Roll</string>
    <string name="user">User</string>
    <string name="choose_number_of_dice_to_roll">Choose Number of Dice to roll</string>
    <string name="settings">Settings</string>
    <string name="preference_file_key">com.strixtechnology.diceroller.prefs</string>
    <string name="hint">hint</string>
    <string name="home">Home</string>
    <string name="dice_sides">Dice sides</string>
    <string name="number_of_dices">Number of Dices</string>
</resources>