<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAccessibility="no"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/rollDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="DiceRoller"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/sameNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/sumValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="sameNumbers" />

    <TextView
        android:id="@+id/sumValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/secondDiceImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="TextView2" />

    <ImageView
        android:id="@+id/diceImage"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/rollDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/secondDiceImage"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="0.899"
        tools:srcCompat="@drawable/dice_2" />

    <ImageView
        android:id="@+id/secondDiceImage"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/todo"
        android:cropToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/rollDice"
        app:layout_constraintEnd_toStartOf="@+id/diceImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="0.899"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/timesYouRolled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="timesRolled" />

    <Button
        android:id="@+id/rollDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/roll"
        app:layout_constraintBottom_toTopOf="@+id/timesYouRolled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/rollDice"
        app:layout_constraintEnd_toStartOf="@+id/diceImage"
        app:layout_constraintStart_toEndOf="@+id/secondDiceImage"
        app:layout_constraintTop_toBottomOf="@+id/sumValue" />

</androidx.constraintlayout.widget.ConstraintLayout>